cbits/Bullet.h

void btSoftBody_Body_applyDCImpulse(void *c,float* p0); //method: applyDCImpulse void ( ::btSoftBody::Body::* )( ::btVector3 const & ) const
void btSoftBody_Body_applyAImpulse(void *c,void* p0); //method: applyAImpulse void ( ::btSoftBody::Body::* )( ::btSoftBody::Impulse const & ) const
void btSoftBody_Body_angularVelocity(void *c,float* p0,float* ret); //method: angularVelocity ::btVector3 ( ::btSoftBody::Body::* )( ::btVector3 const & ) const
void btSoftBody_Body_angularVelocity0(void *c,float* p0,float* ret); //method: angularVelocity ::btVector3 ( ::btSoftBody::Body::* )( ::btVector3 const & ) const
void btSoftBody_Body_angularVelocity1(void *c,float* ret); //method: angularVelocity ::btVector3 ( ::btSoftBody::Body::* )(  ) const
void btSoftBody_Body_applyVAImpulse(void *c,float* p0); //method: applyVAImpulse void ( ::btSoftBody::Body::* )( ::btVector3 const & ) const
void btSoftBody_Body_applyImpulse(void *c,void* p0,float* p1); //method: applyImpulse void ( ::btSoftBody::Body::* )( ::btSoftBody::Impulse const &,::btVector3 const & ) const
void btSoftBody_Body_applyDAImpulse(void *c,float* p0); //method: applyDAImpulse void ( ::btSoftBody::Body::* )( ::btVector3 const & ) const
void btSoftBody_Body_velocity(void *c,float* p0,float* ret); //method: velocity ::btVector3 ( ::btSoftBody::Body::* )( ::btVector3 const & ) const
float btSoftBody_Body_invMass(void *c); //method: invMass ::btScalar ( ::btSoftBody::Body::* )(  ) const
void btSoftBody_Body_xform(void *c,float* ret); //method: xform ::btTransform const & ( ::btSoftBody::Body::* )(  ) const
void btSoftBody_Body_m_soft_set(void *c,void* a); //attribute: ::btSoftBody::Cluster * btSoftBody_Body->m_soft
void* btSoftBody_Body_m_soft_get(void *c); //attribute: ::btSoftBody::Cluster * btSoftBody_Body->m_soft
void btSoftBody_Body_m_rigid_set(void *c,void* a); //attribute: ::btRigidBody * btSoftBody_Body->m_rigid
void* btSoftBody_Body_m_rigid_get(void *c); //attribute: ::btRigidBody * btSoftBody_Body->m_rigid
void btSoftBody_Body_m_collisionObject_set(void *c,void* a); //attribute: ::btCollisionObject * btSoftBody_Body->m_collisionObject
void* btSoftBody_Body_m_collisionObject_get(void *c); //attribute: ::btCollisionObject * btSoftBody_Body->m_collisionObject
void* btSoftBody_CJoint_new(); //constructor: CJoint  ( ::btSoftBody::CJoint::* )(  ) 
void btSoftBody_CJoint_free(void *c);
 
void btSoftBody_CJoint_Terminate(void *c,float p0); //method: Terminate void ( ::btSoftBody::CJoint::* )( ::btScalar ) 
//not supported method: Type ::btSoftBody::Joint::eType::_ ( ::btSoftBody::CJoint::* )(  ) const
// error:  - unsupported

void btSoftBody_CJoint_Solve(void *c,float p0,float p1); //method: Solve void ( ::btSoftBody::CJoint::* )( ::btScalar,::btScalar ) 
void btSoftBody_CJoint_Prepare(void *c,float p0,int p1); //method: Prepare void ( ::btSoftBody::CJoint::* )( ::btScalar,int ) 
void btSoftBody_CJoint_m_life_set(void *c,int a); //attribute: int btSoftBody_CJoint->m_life
int btSoftBody_CJoint_m_life_get(void *c); //attribute: int btSoftBody_CJoint->m_life
void btSoftBody_CJoint_m_maxlife_set(void *c,int a); //attribute: int btSoftBody_CJoint->m_maxlife